testdata/bad/timestampWithTerminatingColon.ion
// Numbers can's be terminated by colon.
( 2007-07-20T12:00:bc )
